<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardview="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        cardview:contentPadding="0"
        >
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/backgroundcolor"
            android:minWidth="25px"
            android:minHeight="25px"
            >
                <TextView
                    android:id="@+id/text"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:text="活動訊息"
                    android:textSize="30sp"
                    android:background="@drawable/shape"
                    />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text"
                android:autoLink="web"
                android:linksClickable="true"
                android:textSize="20dp"
                android:text="@string/txtCredits"/>
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView"
                android:autoLink="web"
                android:textSize="20dp"
                android:linksClickable="true"
                android:text="@string/txtCredits2"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView1"
                android:textSize="20dp"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/txtCredits3"/>



            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/transparent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:elevation="4dp"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.v4.widget.DrawerLayout>